alignment fixes

--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -174,7 +174,7 @@ thead {
 // STYLES FOR NAVBAR
 
 .navbar { 
-  min-height: 80px; 
+  min-height: 60px; 
   &-default {
     background-color: #000;
     margin: 0;
@@ -197,9 +197,9 @@ thead {
       &>li>a {
         color: #FFF;
         font-family: 'Lato', sans-serif;
-        padding: 30px 30px;
+        padding: 23px 30px;
         &.nav-buttons {
-          font-size: 26px;                
+          font-size: 22px;                
         }
         &:hover {
           background-color: $link-blue;
@@ -277,7 +277,7 @@ thead {
 }
 
 .navbar-form {
-  margin-top: 23.5px;
+  margin-top: 17px;
   width: 34%;
   padding: 0;
   padding-left: 15px;
